--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
             <li><a href="#">Submit Your Work</a></li>
         </ul>
     </nav>
-
+    <div class="hero">
+        <h1>Where Every Pixel Tells A Story</h1>
+    </div>
 
 </body>
 
