--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Our Works</a></li>
-            <li><a href="#">Vision</a></li>
+            <li><a href="#">About Us</a></li>
             <li><a href="#">Submit Your Work</a></li>
         </ul>
     </nav>
