--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         <h1>Where Every Pixel Tells A Story</h1>
     </div>
 
+    <div class="works">
+        <h1>Our Works</h1>
+    </div>
+
 </body>
 
 </html>
